fix: letter-spacing

--- a/src/styles/ftva/_page-anchor.scss
+++ b/src/styles/ftva/_page-anchor.scss
@@ -10,6 +10,7 @@
         text-transform: unset;
         align-self: flex-start;
         justify-content: flex-start;
+        letter-spacing: normal;
     }
     .page-anchor-list,
     .link a { 
